crates/rd2qmd-cli/tests/snapshots/integration__external_links_fallback_warning_no_external_link_url.snap
---
source: crates/rd2qmd-cli/tests/integration.rs
expression: stderr
---
Warning: 1 package(s) not installed, links will become plain inline code: somepkg
Converted 1 files, 0 failed
