crates/rd2qmd-cli/tests/snapshots/integration__formatting_qmd.snap
---
source: crates/rd2qmd-cli/tests/integration.rs
expression: output
---
---
title: "Formatting Examples"
pagetitle: "Formatting Examples — formatting"
aliases:
  - "formatting"
---

# Formatting Examples

## Description

 This demonstrates _emphasis_, **strong text**, and `inline code`. It also has a [hyperlink](https://example.com) and email: [test@example.com](mailto:test@example.com). 

## Usage

```r
formatting()
```

## Details

 Here is a bullet list: 

- First item 
- Second item with `code`
- Third item 

And a numbered list: 

1. Step one 
2. Step two 

## Examples

```{r}
# No examples needed
```
