crates/rd2qmd-cli/tests/snapshots/integration__init_config_toml.snap
---
source: crates/rd2qmd-cli/tests/integration.rs
expression: content
---
#:schema https://raw.githubusercontent.com/eitsupi/rd2qmd/main/crates/rd2qmd-cli/schema/rd2qmd.schema.json

[output]
format = "qmd"
frontmatter = true
pagetitle = true
arguments_format = "list-table"
describe_format = "definition-list"
include_internal = false

[code]
exec_dontrun = false
exec_donttest = true

[links]
external_link_url = "https://rdrr.io/pkg/{package}/man/{topic}.html"
unqualified_link_url = "https://rdrr.io/r/base/{topic}.html"

[external]
enabled = true
