crates/rd2qmd-cli/tests/snapshots/integration__init_schema_json.snap
---
source: crates/rd2qmd-cli/tests/integration.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Config",
  "description": "Root configuration structure",
  "type": "object",
  "properties": {
    "code": {
      "description": "Code block configuration",
      "$ref": "#/$defs/CodeConfig"
    },
    "external": {
      "description": "External package link resolution configuration",
      "$ref": "#/$defs/ExternalConfig"
    },
    "links": {
      "description": "Link resolution configuration",
      "$ref": "#/$defs/LinksConfig"
    },
    "output": {
      "description": "Output format configuration",
      "$ref": "#/$defs/OutputConfig"
    }
  },
  "$defs": {
    "ArgumentsFormat": {
      "description": "Output format for the Arguments section",
      "oneOf": [
        {
          "description": "Pipe table - limited to inline content",
          "type": "string",
          "const": "pipe-table"
        },
        {
          "description": "Pandoc grid table - supports block elements (lists, paragraphs) in cells",
          "type": "string",
          "const": "grid-table"
        },
        {
          "description": "Quarto list-table (default) - requires Quarto 1.9+, compatible with q2",
          "type": "string",
          "const": "list-table"
        },
        {
          "description": "Markdown loose list - bold inline code name + indented description; compatible everywhere",
          "type": "string",
          "const": "list"
        }
      ]
    },
    "CodeConfig": {
      "description": "Code block configuration",
      "type": "object",
      "properties": {
        "exec_dontrun": {
          "description": "Make \\dontrun{} example code executable ({r} blocks) (default: false)",
          "type": [
            "boolean",
            "null"
          ]
        },
        "exec_donttest": {
          "description": "Make \\donttest{} example code executable (default: true)",
          "type": [
            "boolean",
            "null"
          ]
        },
        "quarto_code_blocks": {
          "description": "Use Quarto {r} code blocks instead of plain r blocks (auto-set based on format if not specified)",
          "type": [
            "boolean",
            "null"
          ]
        }
      }
    },
    "DescribeFormat": {
      "description": "Output format for Rd description lists",
      "oneOf": [
        {
          "description": "Pandoc definition list (default) - requires definition-list support",
          "type": "string",
          "const": "definition-list"
        },
        {
          "description": "Markdown bullet list - supports CommonMark and GFM, including nested descriptions",
          "type": "string",
          "const": "list"
        },
        {
          "description": "Terms become headings below their enclosing section; beyond H6, use bullet lists",
          "type": "string",
          "const": "headings"
        }
      ]
    },
    "ExternalConfig": {
      "description": "External package link resolution configuration",
      "type": "object",
      "properties": {
        "cache_dir": {
          "description": "Cache directory for pkgdown.yml files (default: system temp directory)",
          "type": [
            "string",
            "null"
          ]
        },
        "enabled": {
          "description": "Enable external package link resolution (default: true)",
          "type": [
            "boolean",
            "null"
          ]
        },
        "lib_paths": {
          "description": "R library paths to search for external packages",
          "type": [
            "array",
            "null"
          ],
          "items": {
            "type": "string"
          }
        }
      }
    },
    "LinksConfig": {
      "description": "Link resolution configuration",
      "type": "object",
      "properties": {
        "external_link_url": {
          "description": "URL template for qualified links (`\\link[pkg]{topic}`) whose package is\nnot found in `package_urls`. Use {package} and {topic} as placeholders.\n(default: \"https://rdrr.io/pkg/{package}/man/{topic}.html\")",
          "type": [
            "string",
            "null"
          ]
        },
        "internal_link_url": {
          "description": "URL template for internal links resolved via the alias index.\nUse {file} for the alias-resolved file basename and {topic} for the\nlink topic. (default: derived from the output format as \"{file}.<ext>\")",
          "type": [
            "string",
            "null"
          ]
        },
        "package_urls": {
          "description": "Package URL map: package name -> full URL template with a {topic}\nplaceholder. Entries take precedence over automatic external link\nresolution and over `external_link_url`.\nExample: `dplyr = \"https://dplyr.tidyverse.org/reference/{topic}.html\"`",
          "type": [
            "object",
            "null"
          ],
          "additionalProperties": {
            "type": "string"
          }
        },
        "unqualified_link_url": {
          "description": "URL template for unqualified links (`\\link{topic}`) when alias lookup fails.\nUse {topic} as placeholder.\n(default: \"https://rdrr.io/r/base/{topic}.html\")",
          "type": [
            "string",
            "null"
          ]
        }
      }
    },
    "OutputConfig": {
      "description": "Output format configuration",
      "type": "object",
      "properties": {
        "arguments_format": {
          "description": "Output format for Arguments section (default: list-table)",
          "anyOf": [
            {
              "$ref": "#/$defs/ArgumentsFormat"
            },
            {
              "type": "null"
            }
          ]
        },
        "describe_format": {
          "description": "Output format for description lists (default: definition-list)",
          "anyOf": [
            {
              "$ref": "#/$defs/DescribeFormat"
            },
            {
              "type": "null"
            }
          ]
        },
        "format": {
          "description": "Output format: \"qmd\" (Quarto Markdown), \"md\" (standard Markdown), or \"rmd\" (R Markdown)",
          "type": [
            "string",
            "null"
          ]
        },
        "frontmatter": {
          "description": "Add YAML frontmatter with title (default: true)",
          "type": [
            "boolean",
            "null"
          ]
        },
        "include_internal": {
          "description": "Include topics with \\keyword{internal} (default: false)\nBy default, internal topics are skipped (matching pkgdown behavior).",
          "type": [
            "boolean",
            "null"
          ]
        },
        "pagetitle": {
          "description": "Add pkgdown-style pagetitle metadata (\"<title> — <name>\") (default: true)",
          "type": [
            "boolean",
            "null"
          ]
        },
        "prefer_ascii_math": {
          "description": "Prefer the ASCII representation of \\eqn{}/\\deqn{} equations over LaTeX\nmath when one is present (default: false). Intended for renderers\nwithout math support, such as terminal pagers.",
          "type": [
            "boolean",
            "null"
          ]
        }
      }
    }
  }
}
