crates/rd2qmd-cli/tests/snapshots/integration__issue_54_qmd.snap
---
source: crates/rd2qmd-cli/tests/integration.rs
expression: output
---
# Adjacent prose text nodes

## Description

First sentence ends here Second sentence starts with a space. Third sentence starts with four spaces.
